src/tests/update/snapshots/ciboulette2pg__tests__update__query_params__relationships_many_to_one_sparse_child.snap
---
source: src/tests/update/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "author",
    "related_type": "comments",
    "related_id": "[uuid]"
  },
  {
    "id": "[uuid]",
    "type": "comments",
    "data": {
      "body": "Wasnt convinced..."
    }
  }
]
